update photo and some bios

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>AboutMe - 3D Responsive Vcard & Portfolio</title>
+<title>About Alain - 3D Responsive Portfolio</title>
 <!-- META TAGS  -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=1024" />
@@ -51,12 +51,9 @@
       <h1>ZhangLei(Alain)</h1>
       <h2>User Experience Designer / Developer</h2>
       <ul class="icons">
-        <li><a href=""><img class="icon" src="images/social-icons/facebook.png" alt="Facebook" /></a></li>
-        <li><a href=""><img class="icon" src="images/social-icons/twitter.png" alt="Twitter" /></a></li>
-        <li><a href=""><img class="icon" src="images/social-icons/flickr.png" alt="Flickr" /></a></li>
-        <li><a href=""><img class="icon" src="images/social-icons/delicious.png" alt="Delicious" /></a></li>
-        <li><a href=""><img class="icon" src="images/social-icons/stumbleupon.png" alt="Stumble Upon" /></a></li>
-        <li><a href=""><img class="icon" src="images/social-icons/youtube.png" alt="YouTube" /></a></li>
+        <li><a href=""><img class="icon" src="images/social-icons/facebook.png" src="http://www.facebook.com/zhanglei903" alt="Facebook"/></a></li>
+        <li><a href=""><img class="icon" src="images/social-icons/twitter.png" src="https://twitter.com/igo903" alt="Twitter" /></a></li>
+        <li><a href=""><img class="icon" src="images/social-icons/flickr.png" src="http://www.flickr.com/photos/zhanglei903/" alt="Flickr" /></a></li>
       </ul>
     </div>
     </div>
@@ -67,9 +64,7 @@
     <div id="about-scroll" class="jp-container about-panel">
     <div class="about-info">
       <h2>About Me</h2>
-      <p>Lorem ipsum dolor sit amet, consectet adipiscing elit. Ut vitae velit at velit pretiu sodales. Maecenas egestas imperdiet mauris, vel elementui turpis iaculis eu.
-      Lorem ipsum dolor sit amet, consectet adipiscing elit.</p>
-      <p>Lorem ipsum dolor sit amet, consectet adipiscing elit. Ut vitae velit at velit pretiu sodales. Maecenas egestas imperdiet mauri.</p>
+      <p>I'm an UX developer and senior interaction designer with more than five years working experience both in United States and Chinese corporation. My projects cover in Financial Systems, SNS application, e-commerce system and etc. I’m passionate about open web standards, front-end develop and interaction design . I love researching new ways to use them. My work has repeatedly earned acclaims in my client and employer.</p>
       </div>
       <div class="about-grid-left">
         <p><span class="label">NAME:</span>Zhang, Lei(Alain)</p>
@@ -90,17 +85,15 @@
     <div class="resume-info">
       <h2>Experience</h2>
       <div class="resume">
-        <p class="first"><span class="place">Senior Developer - Google Inc</span><span class="time">2010 to present</span></p>
-        <p class="second">Lorem ipsum dolor sit amet, habitasse pretium dolor sociiss. Nulla preti facilisis interdum elit amet erat, consectetuer ant condimentum eaquemea ante maecenas.</p>
+        <p class="first"><span class="place">Senior UX Developer, Interaction Designer - State Street Global Advisor</span><span class="time">2008 to present</span></p>
+        <p class="second">I'm working as the first UX developer and interaction designer in SSgA China Office. My repsonsibility is drawing out the wireframe based on the requirement, coding front-end pages based on the completed visual design. The projects are based on W3C compliant. I'm familiar with user experience in financial systems. I had business trip to Boston and New York for front-end developing and system interaction procedure discussion. Transform Flash based website into HTML5, CSS3. Developed HTML5 Web App. </p>
       </div>
       <div class="resume">
-        <p class="first"><span class="place">Art Director - Designs Ltd</span><span class="time">2008-2010</span></p>
-        <p class="second">Lorem ipsum dolor sit amet, habitasse pretium dolor sociiss. Nulla preti facilisis interdum elit amet erat, consectetuer ant condimentum eaquemea ante maecenas. Lorem ipsum dolor sit amet, habitasse pretium dolor sociiss.</p>
+        <p class="first"><span class="place">Art Director - China Telecom(Wuhan)</span>
+        <span class="time">2007-2008</span></p>
+        <p class="second"></p>
       </div>
-      <div class="resume">
-        <p class="first"><span class="place">Web Designer - Web Agency</span><span class="time">2005-2008</span></p>
-        <p class="second">Lorem ipsum dolor sit amet, habitasse pretium dolor sociiss. Nulla preti facilisis interdum elit amet erat, consectetuer ant condimentum eaquemea ante maecenas. Lorem ipsum dolor sit amet, habitasse pretium dolor sociiss.</p>
-      </div>
+
       <h2>Education</h2>
       <div class="resume">
         <p class="first"><span class="place">The University of Texas</span><span class="time">1997-2002</span></p>
