update style and bio

--- a/index.html
+++ b/index.html
@@ -91,17 +91,13 @@
       <div class="resume">
         <p class="first"><span class="place">Art Director - China Telecom(Wuhan)</span>
         <span class="time">2007-2008</span></p>
-        <p class="second"></p>
+        <p class="second">I was working as the Art Director in China Telcom, directing the website and AI works for China Telcom Wuhan</p>
       </div>
 
       <h2>Education</h2>
       <div class="resume">
-        <p class="first"><span class="place">The University of Texas</span><span class="time">1997-2002</span></p>
-        <p class="second">Lorem ipsum dolor sit amet, habitasse pretium dolor sociiss. Nulla preti facilisis interdum elit amet erat, consectetuer ant condimentum eaquemea ante maecenas.</p>
-      </div>
-      <div class="resume">
-        <p class="first"><span class="place">Institue of Design</span><span class="time">1994-1997</span></p>
-        <p class="second">Lorem ipsum dolor sit amet, habitasse pretium dolor sociiss. Nulla preti facilisis interdum elit amet erat, consectetuer ant condimentum eaquemea ante maecenas.</p>
+        <p class="first"><span class="place">Wuhan University</span><span class="time">2003 - 2007</span></p>
+        <p class="second">Major in English Literature and Software Engineering</p>
       </div>
       </div>
     </div>
