add tencent info

--- a/index.html
+++ b/index.html
@@ -84,9 +84,15 @@
     <div id="resume-scroll" class="jp-container resume-panel">
     <div class="resume-info">
       <h2>Experience</h2>
+
       <div class="resume">
-        <p class="first"><span class="place">Senior UX Developer, Interaction Designer - State Street Global Advisor</span><span class="time">2008 to present</span></p>
-        <p class="second">I'm working as the first UX developer and interaction designer in SSgA China Office. My repsonsibility is drawing out the wireframe based on the requirement, coding front-end pages based on the completed visual design. The projects are based on W3C compliant. I'm familiar with user experience in financial systems. I had business trip to Boston and New York for front-end developing and system interaction procedure discussion. Transform Flash based website into HTML5, CSS3. Developed HTML5 Web App. </p>
+        <p class="first"><span class="place">Senior UX Developer, Interaction Designer - Tencent Corp.</span><span class="time">2012 to present</span></p>
+        <p class="second">I'm working as the primary Interaction Designer, front-end developer for Tencent QQ Browser, Tencent Open plateform and Mobile App Project. I'm familiar with internet products, HTML5 CSS3 web app devlopement.</p>
+      </div>
+
+      <div class="resume">
+        <p class="first"><span class="place">Senior UX Developer, Interaction Designer - State Street Global Advisor</span><span class="time">2008 to 2012</span></p>
+        <p class="second">I was working as the first UX developer and interaction designer in SSgA China Office. My repsonsibility is drawing out the wireframe based on the requirement, coding front-end pages based on the completed visual design. The projects are based on W3C compliant. I'm familiar with user experience in financial systems. I had business trip to Boston and New York for front-end developing and system interaction procedure discussion. Transform Flash based website into HTML5, CSS3. Developed HTML5 Web App. </p>
       </div>
       <div class="resume">
         <p class="first"><span class="place">Art Director - China Telecom(Wuhan)</span>
