--- a/index.html
+++ b/index.html
@@ -736,10 +736,9 @@
                                                       <label for="email">Email</label>
                                                       <input type="text" name="email" id="email" class="required email">
                                                     </p>
-                                                    
                                                     <p>
-                                                      <label for="subject">Subject</label>
-                                                      <input type="text" name="subject" id="subject" class="required">
+                                                      <label for="subject">Wechat</label>
+                                                      <input type="text" name="wechat" id="wechat" class="required">
                                                     </p>
                                                     
                                                     <p>
